--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -34,32 +34,6 @@
         .charts {
           padding-bottom: 20px;
         }
-
-        .list-container {
-          padding-bottom: 20px;
-          .list {
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-            border-radius: 10px;
-            margin: 20px;
-            height: 600px;
-            padding-bottom: 100px;
-            &:hover {
-              box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1),
-                0 2px 4px -2px rgb(0 0 0 / 0.1);
-            }
-
-            .list-title {
-              font-size: 24px;
-              font-weight: 500;
-              text-transform: uppercase;
-              color: #374151;
-              margin: 20px 0px;
-              padding-bottom: 10px;
-            }
-          }
-        }
       }
     }
   }
